--- a/newyear.html
+++ b/newyear.html
@@ -1,10 +1,18 @@
 <html>
-<title>Untitled</title>
-<body background="https://img.freepik.com/free-vector/firework-pictograms-black-background-set_1284-10629.jpg?size=626&ext=jpg&ga=GA1.1.1848742045.1702140036&semt=sph">
-<script>
-var name=prompt("Please enter you FULL NAME");
-document.title="HAPPY NEW YEAR"+   name;
-document.write("<font face=Showcard Gothic color=white size=8><i><h1 align=center>HAPPY<BR>NEW<BR>YEAR<BR>"+name+"</h1></i></font>");
-</script>
+<head>
+  <title>Untitled</title>
+  <style>
+    body {
+      background: url("https://img.freepik.com/free-vector/firework-pictograms-black-background-set_1284-10629.jpg?size=626&ext=jpg&ga=GA1.1.1848742045.1702140036&semt=sph") no-repeat center center fixed;
+      background-size: cover;
+    }
+  </style>
+</head>
+<body>
+  <script>
+    var name = prompt("Please enter your FULL NAME");
+    document.title = "HAPPY NEW YEAR " + name;
+    document.write("<font face='Showcard Gothic' color='white' size='8'><i><h1 align='center'>HAPPY<br>NEW<br>YEAR<br>" + name + "</h1></i></font>");
+  </script>
 </body>
 </html>
